feat: create new and edit page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,7 +26,7 @@
       </td>
       <td class="align-middle">60</td>
       <td class="align-middle">
-        <a href="#" class="btn btn-secondary">修改</a>
+        <a href="/edit" class="btn btn-secondary">修改</a>
         <a href="#" class="btn btn-secondary">刪除</a>
       </td>
     </tr>
@@ -40,10 +40,10 @@
       </td>
       <td class="align-middle">60</td>
       <td class="align-middle">
-        <a href="#" class="btn btn-secondary">修改</a>
+        <a href="/edit" class="btn btn-secondary">修改</a>
         <a href="#" class="btn btn-secondary">刪除</a>
       </td>
     </tr>
   </table>
-  <a href="#" class="btn btn-primary">新增支出</a>
+  <a href="/new" class="btn btn-primary">新增支出</a>
 </div>
