--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,37 +13,25 @@
   </div>
   <div class="d-flex justify-content-center"> 
     <div class="mx-4">總金額: </div>
-    <div class="fs-1 text-success">10000</div>
+    <div class="fs-1 text-success">{{ totalAmount }}</div>
   </div>
   <table class="table table-striped my-4">
+    {{#each expenses}}
     <tr>
       <td class="d-flex align-items-center">
         <div class="mx-4"><i class="fa-solid fa-utensils fa-xl"></i></div>
         <div>
-          <div class="text-start">午餐</div>
-          <div class="text-start">2019/4/23</div>
+          <div class="text-start">{{ this.name }}</div>
+          <div class="text-start">{{ this.date }}</div>
         </div>
       </td>
-      <td class="align-middle">60</td>
+      <td class="align-middle">{{ this.amount }}</td>
       <td class="align-middle">
         <a href="/edit" class="btn btn-secondary">修改</a>
         <a href="#" class="btn btn-secondary">刪除</a>
       </td>
     </tr>
-    <tr>
-      <td class="d-flex align-items-center">
-        <div class="mx-4"><i class="fa-solid fa-utensils fa-xl"></i></div>
-        <div>
-          <div class="text-start">晚餐</div>
-          <div class="text-start">2019/4/23</div>
-        </div>
-      </td>
-      <td class="align-middle">60</td>
-      <td class="align-middle">
-        <a href="/edit" class="btn btn-secondary">修改</a>
-        <a href="#" class="btn btn-secondary">刪除</a>
-      </td>
-    </tr>
+    {{/each}}
   </table>
   <a href="/new" class="btn btn-primary">新增支出</a>
 </div>
