--- a/views/index.hbs
+++ b/views/index.hbs
@@ -19,7 +19,7 @@
     {{#each expenses}}
     <tr>
       <td class="d-flex align-items-center">
-        <div class="mx-4"><i class="fa-solid fa-utensils fa-xl"></i></div>
+        <div class="mx-4">{{{ this.categoryId }}}</div>
         <div>
           <div class="text-start">{{ this.name }}</div>
           <div class="text-start">{{ this.date }}</div>
@@ -27,8 +27,10 @@
       </td>
       <td class="align-middle">{{ this.amount }}</td>
       <td class="align-middle">
-        <a href="/edit" class="btn btn-secondary">修改</a>
-        <a href="#" class="btn btn-secondary">刪除</a>
+        <form action="/{{ this._id}}?_method=DELETE" method="post">
+          <a href="/{{ this._id }}/edit" class="btn btn-secondary">修改</a>
+          <button type="submit" class="btn btn-secondary">刪除</button>
+        </form>
       </td>
     </tr>
     {{/each}}
