--- a/views/new.hbs
+++ b/views/new.hbs
@@ -10,7 +10,7 @@
           <label for="name" class="col-form-label">名稱*</label>
         </div>
         <div class="col-auto">
-          <input name="name" type="text" class="form-control" id="name">
+          <input name="name" type="text" class="form-control" id="name" required>
         </div>
       </div>
       <div class="row g-3 align-items-center mb-3">
@@ -18,7 +18,7 @@
           <label for="date" class="form-label">日期*</label>
         </div>
         <div class="col-auto">
-          <input name="date" type="date" class="form-control" id="date">
+          <input name="date" type="date" class="form-control" id="date" required>
         </div>
       </div>
       <div class="row g-3 align-items-center mb-3">
@@ -26,7 +26,7 @@
           <label for="category" class="form-label">類別*</label>
         </div>
         <div class="col-auto">
-          <select name="categoryId" id="category">
+          <select name="categoryId" id="category" required>
             <option value=1>家居物業</option>
             <option value=2>交通出行</option>
             <option value=3>休閒娛樂</option>
@@ -40,7 +40,7 @@
           <label for="amount" class="form-label">金額*</label>
         </div>
         <div class="col-auto">
-          <input name="amount" type="number" class="form-control" id="amount">
+          <input name="amount" type="number" class="form-control" id="amount" required>
         </div>
       </div>
       <button type="submit" class="btn btn-primary">新增支出</button>
