feat: be able to filter category on index page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,11 +4,11 @@
       類別
     </button>
     <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="#">家居物業</a></li>
-      <li><a class="dropdown-item" href="#">交通出行</a></li>
-      <li><a class="dropdown-item" href="#">休閒娛樂</a></li>
-      <li><a class="dropdown-item" href="#">餐飲食品</a></li>
-      <li><a class="dropdown-item" href="#">其他</a></li>
+      <li><a class="dropdown-item" href="/?categoryId=1">家居物業</a></li>
+      <li><a class="dropdown-item" href="/?categoryId=2">交通出行</a></li>
+      <li><a class="dropdown-item" href="/?categoryId=3">休閒娛樂</a></li>
+      <li><a class="dropdown-item" href="/?categoryId=4">餐飲食品</a></li>
+      <li><a class="dropdown-item" href="/?categoryId=5">其他</a></li>
     </ul>
   </div>
   <div class="d-flex justify-content-center"> 
