refacter: modify express routes

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -27,13 +27,13 @@
       </td>
       <td class="align-middle">{{ this.amount }}</td>
       <td class="align-middle">
-        <form action="/{{ this._id}}?_method=DELETE" method="post">
-          <a href="/{{ this._id }}/edit" class="btn btn-secondary">修改</a>
+        <form action="/expenses/{{ this._id}}?_method=DELETE" method="post">
+          <a href="/expenses/{{ this._id }}/edit" class="btn btn-secondary">修改</a>
           <button type="submit" class="btn btn-secondary">刪除</button>
         </form>
       </td>
     </tr>
     {{/each}}
   </table>
-  <a href="/new" class="btn btn-primary">新增支出</a>
+  <a href="/expenses/new" class="btn btn-primary">新增支出</a>
 </div>
