--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -4,7 +4,7 @@
       <div class="col col-md-4 col-lg-4">*必填欄位</div>
       <div class="col col-md-8 col-lg-8 fs-3">請修改你的支出</div>
     </div>
-    <form action="/{{ expense._id }}/edit?_method=PUT" method="POST">
+    <form action="/expenses/{{ expense._id }}/edit?_method=PUT" method="POST">
       <div class="row g-3 align-items-center mb-3">
         <div class="col-auto">
           <label for="name" class="col-form-label">名稱*</label>
