feat: create login and register page, create user model and add register function

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,7 +10,7 @@
 <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand mx-2" href="/">家庭記帳本</a>
-    <a class="btn btn-outline-primary mx-2" href="#">Login</a>
+    <a class="btn btn-outline-primary mx-2" href="/users/login">Login</a>
   </div>
 </nav>
 <body>
