--- a/views/index.hbs
+++ b/views/index.hbs
@@ -27,9 +27,23 @@
       </td>
       <td class="align-middle">{{ this.amount }}</td>
       <td class="align-middle">
-        <form action="/expenses/{{ this._id}}?_method=DELETE" method="post">
+        <form id="delete" action="/expenses/{{ this._id}}?_method=DELETE" method="post">
           <a href="/expenses/{{ this._id }}/edit" class="btn btn-secondary">修改</a>
-          <button type="submit" class="btn btn-secondary">刪除</button>
+          <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#deleteCheck">刪除</button>
+          <!-- Modal -->
+          <div class="modal fade" id="deleteCheck" tabindex="-1" aria-labelledby="deleteCheckLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  確定刪除此筆支出?
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">關閉</button>
+                  <button type="submit" class="btn btn-danger" form="delete">刪除</button>
+                </div>
+              </div>
+            </div>
+          </div>
         </form>
       </td>
     </tr>
